package entity;

public enum EntityType {
    PLAYER,
    ENEMY,
    NPC,
    WORLD_OBJECT;
}