package entity;

public class Npc {
}