package entity;

public abstract class WorldObject {
}