package entity.data;

import java.awt.*;

public class CollisionData {
    public Rectangle area;
    public Rectangle solidArea;
}
