package entity.data;

public class CombatStats {
    public int damage;
}