package entity.data;

public class InteractionData {
}