package entity.data;

import movement.Direction;

import java.awt.*;

public class MovementState {
    public Direction direction;
    public Point velocity;
    public int speed;
}